# old-projects

Awful-SHA256/: Cargo.toml
Awful-SHA256/src/: bitarray.rs  main.rs
HateTaxes/: Cargo.toml
HateTaxes/src/: account.rs  errors.rs  exchange.rs  lib.rs  main.rs  price_obtainer.rs  transaction.rs
HateTaxes/src/coins/: coin.rs
HateTaxes/src/exchanges/: kraken.rs
attempt-at-ecc/: Cargo.toml
attempt-at-ecc/src/: algorithms.rs  curve.rs  keys.rs  main.rs  point.rs  utils.rs
dbmaker/: Cargo.toml  main.rs
factor/: main.c
rsa/: Cargo.toml
rsa/src/: algorithms.rs  encoding.rs  main.rs  private.rs  public.rs
simple-regex/: main.rs
teamtrees-counter/: main.py
