[package]
name = "HateTaxes"
version = "0.1.0"
authors = ["me"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
ureq = { version = "*", features = ["json"] }
chrono = "0.4.19"
